# helloJni

jni/: CMakeLists.txt
src/: Main.java
